--- a/app/src/main/res/layout/fragment_student_home.xml
+++ b/app/src/main/res/layout/fragment_student_home.xml
@@ -6,7 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.StudentHomeFragment"
     android:orientation="vertical"
-    android:weightSum="100">
+    android:weightSum="100"
+    android:background="@drawable/backgroundgradient">
 
     <TextView
         android:layout_width="match_parent"
