--- a/app/src/main/res/layout/activity_quiz_details_screen.xml
+++ b/app/src/main/res/layout/activity_quiz_details_screen.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_aligntop="@id/viewpager"
+        android:layout_alignTop="@id/viewpager"
         android:layout_marginTop="10dp">
 
     </com.google.android.material.tabs.TabLayout>
